src/compiletest/tlcell-06.stderr
error[E0502]: cannot borrow `owner` as immutable because it is also borrowed as mutable
  --> $DIR/tlcell-06.rs:15:17
   |
14 |     let c1mutref = owner.rw(&c1);
   |                    ----- mutable borrow occurs here
15 |     let c2ref = owner.ro(&c2);    // Compile error
   |                 ^^^^^ immutable borrow occurs here
16 |     *c1mutref += 1;
   |     -------------- mutable borrow later used here
